# libocoms

./: LICENSE  Makefile.am  README  VERSION  autogen.pl  configure.ac  index.html  libocoms.spec.in  libservice.spec.in  make_dist_tarball  params.json  rlg_confdefs.h  rlg_conftest.c  test.c  test.make
comm_proj/: Makefile.am  VERSION  autogen.pl  configure.ac  rlg_confdefs.h
comm_proj/config/: Makefile.am  ccs_check_compiler_works.m4  ccs_check_func_lib.m4  ccs_check_icc.m4  ccs_check_mx.m4  ccs_check_openib.m4  ccs_check_os_flavors.m4  ccs_check_package.m4  ccs_check_portals.m4  ccs_check_portals4.m4  ccs_check_vendor.m4  ccs_config_asm.m4  ccs_config_pthreads.m4  ccs_config_solaris_threads.m4  ccs_config_subdir.m4  ccs_config_threads.m4  ccs_configure_options.m4  ccs_contrib.m4  ccs_find_type.m4  ccs_functions.m4  ccs_get_libtool_linker_flags.m4  ccs_get_version.sh  ccs_interix.m4  ccs_lang_link_with_c.m4  ccs_mca.m4  ccs_mca.m4_old  ccs_save_version.m4  ccs_setup_cc.m4  ccs_setup_libltdl.m4  ccs_strip_optflags.m4  ccs_try_assemble.m4  config_files.m4  rte_config.m4
comm_proj/service/: Makefile.am
config/: Makefile.am  c_get_alignment.m4  c_weak_symbols.m4  ccs_case_sensitive_fs_setup.m4  ccs_check_attributes.m4  ccs_check_broken_qsort.m4  ccs_check_compiler_version.m4  ccs_check_icc.m4  ccs_check_ident.m4  ccs_check_openib.m4  ccs_check_portals.m4  ccs_check_portals4.m4  ccs_check_ps.m4  ccs_check_withdir.m4  ccs_config_asm.m4  ccs_config_pthreads.m4  ccs_config_solaris_threads.m4  ccs_config_subdir_args.m4  ccs_config_threads.m4  ccs_ensure_contains_optflags.m4  ccs_find_type.m4  ccs_get_libtool_linker_flags.m4  ccs_get_version.sh  ccs_interix.m4  ccs_load_platform.m4  ccs_setup_component_package.m4  ccs_setup_cxx.m4  ccs_setup_libltdl.m4  ccs_setup_wrappers.m4  ccs_try_assemble.m4  config_files.m4  ocoms_c_get_alignment.m4  ocoms_c_weak_symbols.m4  ocoms_case_sensitive_fs_setup.m4  ocoms_check_attributes.m4  ocoms_check_broken_qsort.m4  ocoms_check_compiler_version.m4  ocoms_check_compiler_works.m4  ocoms_check_func_lib.m4  ocoms_check_icc.m4  (+42 more)
ocoms/: Makefile.am  libocoms_version.h.in
ocoms/asm/: Makefile.am  asm-data.txt  asm.c
ocoms/config/: config_files.m4
ocoms/datatype/: Makefile.am  ocoms_convertor.c  ocoms_convertor.h  ocoms_convertor_internal.h  ocoms_convertor_raw.c  ocoms_copy_functions.c  ocoms_copy_functions_heterogeneous.c  ocoms_datatype.h  ocoms_datatype_add.c  ocoms_datatype_checksum.h  ocoms_datatype_clone.c  ocoms_datatype_copy.c  ocoms_datatype_copy.h  ocoms_datatype_create.c  ocoms_datatype_create_contiguous.c  ocoms_datatype_cuda.c  ocoms_datatype_cuda.h  ocoms_datatype_destroy.c  ocoms_datatype_dump.c  ocoms_datatype_fake_stack.c  ocoms_datatype_get_count.c  ocoms_datatype_internal.h  ocoms_datatype_memcpy.h  ocoms_datatype_module.c  ocoms_datatype_optimize.c  ocoms_datatype_pack.c  ocoms_datatype_pack.h  ocoms_datatype_position.c  ocoms_datatype_prototypes.h  ocoms_datatype_resize.c  ocoms_datatype_unpack.c  ocoms_datatype_unpack.h  service_convertor.c  service_convertor.h  service_convertor_internal.h  service_convertor_raw.c  service_copy_functions.c  service_copy_functions_heterogeneous.c  service_datatype.h  service_datatype_add.c  (+22 more)
ocoms/dstore/: Makefile.am  dstore.h  dstore_types.h
ocoms/mca/: mca.h
ocoms/memoryhooks/: Makefile.am  memory.c  memory.h  memory_internal.h
ocoms/platform/: Makefile.am  ocoms_config.h.in  ocoms_config_bottom.h  ocoms_config_top.h  ocoms_constants.h  ocoms_stdint.h  service_config_bottom.h  service_config_top.h  service_portable_platform.h
ocoms/primitives/: Makefile.am  align.h  hash_string.h  ocoms_socket_errno.h  prefetch.h  service_socket_errno.h  types.h
ocoms/sys/: architecture.h  atomic.h  atomic_impl.h  timer.h
ocoms/threads/: Makefile.am  condition.c  condition.h  mutex.c  mutex.h  mutex_unix.h  mutex_windows.h  thread.c  threads.h  tsd.c  tsd.h
ocoms/util/: Makefile.am  arch.c  arch.h  argv.c  argv.h  cmd_line.c  cmd_line.h  crc.c  crc.h  error.c  error.h  fd.c  fd.h  if.c  if.h  keyval_parse.c  keyval_parse.h  ocoms_atomic_lifo.c  ocoms_atomic_lifo.h  ocoms_bitmap.c  ocoms_bitmap.h  ocoms_environ.c  ocoms_environ.h  ocoms_free_list.c  ocoms_free_list.h  ocoms_graph.c  ocoms_graph.h  ocoms_hash_table.c  ocoms_hash_table.h  ocoms_info_support.c  ocoms_info_support.h  ocoms_list.c  ocoms_list.h  ocoms_object.c  ocoms_object.h  ocoms_pointer_array.c  ocoms_pointer_array.h  ocoms_rb_tree.c  ocoms_rb_tree.h  ocoms_value_array.c  (+31 more)
service/: Makefile.am  libservice_version.h.in
service/asm/: Makefile.am  asm.c
service/config/: config_files.m4
service/datatype/: Makefile.am  service_convertor.c  service_convertor.h  service_convertor_internal.h  service_convertor_raw.c  service_copy_functions.c  service_copy_functions_heterogeneous.c  service_datatype.h  service_datatype_add.c  service_datatype_checksum.h  service_datatype_clone.c  service_datatype_copy.c  service_datatype_copy.h  service_datatype_create.c  service_datatype_create_contiguous.c  service_datatype_cuda.c  service_datatype_cuda.h  service_datatype_destroy.c  service_datatype_dump.c  service_datatype_fake_stack.c  service_datatype_get_count.c  service_datatype_internal.h  service_datatype_memcpy.h  service_datatype_module.c  service_datatype_optimize.c  service_datatype_pack.c  service_datatype_pack.h  service_datatype_position.c  service_datatype_prototypes.h  service_datatype_resize.c  service_datatype_unpack.c  service_datatype_unpack.h
service/include/: Makefile.am
service/mca/: mca.h
service/memoryhooks/: memory.c  memory.h  memory_internal.h
service/platform/: Makefile  Makefile.am  Makefile.in  ccs_config.h  ccs_config.h.in~  service_config_bottom.h  service_config_top.h  service_constants.h  service_portable_platform.h  service_stdint.h  stamp-h1
service/primitives/: Makefile.am  align.h  hash_string.h  prefetch.h  service_socket_errno.h  types.h
service/sys/: architecture.h  atomic.h  atomic_impl.h  timer.h
service/threads/: condition.c  condition.h  mutex.c  mutex.h  mutex_unix.h  mutex_windows.h  (+4 more)
(+334 files in other folders)
